--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,2 +1,14 @@
 @import "./variables";
 @import "./breakpoints";
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: $font-stack;
+    background-color: $background-1;
+}
+
