--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -2,3 +2,6 @@ $font-stack: 'Open Sans', sans-serif;
 $font-sec: 'Montserrat', sans-serif;
 
 $background-1: #F6F6F6;
+$background-2: #FFFFFF;
+
+$secondary: #4A4B4C;
