--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,15 @@
 </head>
 <body>
 
-    
+    <section class="housing">
+        <h1 class="visually-hidden">Housing</h1>
+    </section>
+
+    <nav class="mobile-nav">
+        <button><img src="img/ic_mobile_navigarion_home_active@3x.png" alt="Active home button"></button>
+        <button><img src="img/ic_mobile_navigarion_info@3x.png" alt="Information button"></button>
+    </nav>
+
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
