--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -10,10 +10,11 @@
 
 body {
     font-family: $font-stack;
+    padding: 20px;
     background-color: $background-1;
 }
 
-.visuallyhidden {
+.visually-hidden {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -26,5 +27,5 @@ body {
 
 /*
 Bron: https://stackoverflow.com/questions/1755656/displaynone-vs-visibilityhidden-vs-text-indent9999-how-screen-reader-behave-w
-Zorg ervoor dat deze tekst wel wordt voorgelezen door screenreaders maar niet wordt gezien door het oog van de gebruiker
+Zorg ervoor dat deze tekst wel wordt voorgelezen door screen readers maar niet wordt gezien door het oog van de gebruiker
 */
