--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,17 @@
 </head>
 <body>
 
-    <section class="housing">
-        <h1 class="visually-hidden">Housing</h1>
+    <section class="page housing">
+        <h2 class="visually-hidden">Housing</h1>
+        <header>
+            <h1>Housing</h2>
+            <button><img src="img/ic_plus_grey@3x.png" alt="Plus button"></button>
+        </header>
+        <form action="">
+            <label for="site-search"></label>
+            <input type="search" id="site-search" name="housing">
+            <button>Search</button>
+        </form>
     </section>
 
     <nav class="mobile-nav">
