--- a/static/css/_houses.scss
+++ b/static/css/_houses.scss
@@ -18,3 +18,27 @@
         height: 30px;
     }
 }
+
+.page {
+    h1 {
+        font-family: $font-sec;
+        font-size: $header-1;
+        text-align: center;
+    }
+
+    header {
+        position: relative;
+
+        button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            background: none;
+            border: none;
+        }
+
+        img {
+            height: 25px;
+        }
+    }
+}
