search bar done begin aan house list

--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -1,9 +1,45 @@
 $font-stack: 'Open Sans', sans-serif;
 $font-sec: 'Montserrat', sans-serif;
 
+$primary: #EB5440;
+$secondary: #4A4B4C;
+
+$tertiory-1: #E8E8E8;
+$tertiory-2: #C3C3C3;
+
 $background-1: #F6F6F6;
 $background-2: #FFFFFF;
 
-$secondary: #4A4B4C;
+$white : #FFFFFF;
 
-$header-1: 18px;
+$text-secondary: #4A4B4C;
+
+$font-input: 12px;
+
+@mixin header-1 {
+    font-family: $font-sec;
+    font-size: 18px;
+}
+
+@mixin header-2 {
+    font-family: $font-sec;
+    font-size: 14px;
+}
+
+@mixin listing-info {
+    font-size: 12px;
+    font-weight: 600;
+    color: $text-secondary;
+}
+
+@mixin buttons-tabs {
+    font-family: $font-sec;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+@mixin flex($direction, $gap) {
+    display: flex;
+    flex-direction: $direction;
+    gap: $gap;
+}
