--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,34 @@
 </head>
 <body>
 
-    <section class="page housing">
-        <h2 class="visually-hidden">Housing</h1>
+    <section class="page houses">
+        <h2 class="visually-hidden">Houses</h1>
         <header>
-            <h1>Housing</h2>
-            <button><img src="img/ic_plus_grey@3x.png" alt="Plus button"></button>
+            <h1>Houses</h2>
+            <button aria-label="Plus"><img src="img/ic_plus_grey@3x.png" alt="Plus button"></button>
         </header>
-        <form action="">
+        <form class="search-bar" action="">
             <label for="site-search"></label>
-            <input type="search" id="site-search" name="housing">
-            <button>Search</button>
+            <input type="search" id="site-search" name="housing" placeholder="Search housing">
         </form>
+        <div>
+            <button>Price</button>
+            <button>Size</button>
+        </div>
+        <section class="houses-list">
+            <h2 class="visually-hidden">Houses list</h2>
+            <article>
+                <h3>Stokvisstraat 132</h3>
+                <p>€ 500.000</p>
+                <p>1011AA Amsterdam</p>
+                <ul>
+                    <li><img src="img/ic_bed@3x.png" alt="Bedroom">1</li>
+                    <li><img src="img/ic_bath@3x.png" alt="Bathroom">1</li>
+                    <li><img src="img/ic_size@3x.png" alt="Size">120 m2</li>
+                </ul>
+                <img class="placeholder-img" src="img/img_placeholder_house@3x.png" alt="Placeholder house">
+            </article>
+        </section>
     </section>
 
     <nav class="mobile-nav">
