--- a/static/css/_houses.scss
+++ b/static/css/_houses.scss
@@ -21,8 +21,7 @@
 
 .page {
     h1 {
-        font-family: $font-sec;
-        font-size: $header-1;
+        @include header-1;
         text-align: center;
     }
 
@@ -38,7 +37,117 @@
         }
 
         img {
-            height: 25px;
+            height: 20px;
         }
     }
+}
+
+.houses {
+    @include flex(column, 20px);
+    
+    div {
+        display: flex;
+
+        button {
+            @include buttons-tabs;
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background-color: $primary;
+            border-radius: 10px 0px 0px 10px;
+            color: $white;
+            
+            &:last-of-type {
+                background-color: $tertiory-2;
+                border-radius: 0px 10px 10px 0px;
+            }
+        }
+    }
+}
+
+.search-bar {
+    position: relative;
+
+    &::after {
+        content: "";
+        transform: translateY(-50%);
+        top: 50%;
+        left: 20px;
+        position: absolute;
+        right: 1.25em;
+        width: 20px;
+        height: 20px;
+        background-image: url(../img/ic_search@3x.png);
+        background-size: contain;
+        z-index: 1;
+    }
+
+    input {
+        font-family: $font-stack;
+        font-size: $font-input;
+        width: 100%;
+        padding: 20px 20px 20px 60px;
+        border-radius: 10px;
+        border: none;
+        background-color: $tertiory-1;
+
+        /*
+        &::-webkit-search-cancel-button {
+            -webkit-appearance: none;
+            height: 1em;
+            width: 1em;
+            border-radius: 50em;
+            background: url(../img/ic_clear@3x.png) no-repeat 50% 50%;
+            background-size: contain;
+            opacity: 0;
+            pointer-events: none;
+        }
+        FIXME: Een eigen x button
+        */
+    }
+}
+
+.houses-list {
+    h3 {
+        @include header-2;
+    }
+
+    article {
+        @include listing-info;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 5px 15px;
+        padding: 20px;
+        background-color: $background-2;
+        border-radius: 10px;
+        box-shadow: 0px 0px 30px rgba($secondary, 0.3);
+
+        p:last-of-type {
+            color: $tertiory-2;
+        }
+    }
+
+    ul {
+        @include flex(row, 15px);
+        margin-top: 10px;
+
+        li {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        img {
+            height: 15px;
+        }
+    }
+}
+
+.placeholder-img {
+    grid-row-start: 1;
+    grid-row-end: 6;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
